<resources>
    <string name="title_activity_welcome_page">微喂</string>
    <string name="title_activity_intro_page">微企一站通</string>
    <string name="app_name">微企一站通</string>
    <string name="action_settings">设置</string>
    <string name="txtView_back">返回</string>
    <string name="lbl_cancel">取消</string>
    <string name="lbl_click_again_exit">再按一遍退出</string>
    <string name="appointment_now">马上预约</string>
    <string name="cancel_appointment">取消预约</string>
    <string name="txt_hint_enter_username">输入用户名</string>
    <string name="txt_hint_enter_password">输入密码</string>
    <string name="txt_hint_enter_password_again">再次输入密码</string>
    <string name="txt_hint_enter_company_name">输入公司名</string>
    <string name="txt_hint_enter_verify_code">输入验证码</string>
    <string name="login">登录</string>
    <string name="logout">登出</string>
    <string name="sign_up">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="title_activity_register">用户注册</string>
    <string name="txt_hint_enter_mobile_phone">输入手机号</string>
    <string name="title_activity_register_verify_code">注册验证</string>
    <string name="txt_hint_enter_sms_code">输入手机验证码</string>
    <string name="txt_btn_submit">提交</string>
    <string name="txt_agree_before_reg">请阅读下面协议再进行注册</string>
    <string name="txt_agree_click">《会员注册协议》</string>
    <string name="lbl_agree">同意</string>
    <string name="title_activity_member_agreement">会员注册协议</string>
    <string name="dialog_loading">加载中...</string>
    <string name="dialog_wait">请稍等...</string>
    <string name="dialog_uploading">正在提交...</string>
    <string name="dialog_server_no_response">服务器无响应</string>
    <string name="dialog_btn_OK">确认</string>
    <string name="toast_data_updating">数据更新中...</string>
    <string name="unconnected">无网络连接</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_account_centre">账号中心</string>
    <string name="lbl_txtView_Username">用户名</string>
    <string name="title_activity_user_info_form">个人信息</string>
    <string name="title_activity_user_info_update">更新信息</string>
    <string name="title_activity_inte_prop_search">快捷知产</string>
    <string name="title_activity_trade_mark_similar_search">商标近似查询</string>
    <string name="title_activity_trade_mark_status_search">商标状态查询</string>
    <string name="title_activity_trade_mark_integrated_search">商标综合查询</string>
    <string name="lbl_tab_trademark_service">商标服务</string>
    <string name="lbl_tab_patent_service">专利服务</string>
    <string name="lbl_btn_trademark_approximate_search">商标近似查询</string>
    <string name="lbl_btn_trademark_integrated_search">商标综合查询</string>
    <string name="lbl_btn_trademark_status_search">商标状态查询</string>
    <string name="lbl_btn_trademark_naming">商标取名</string>
    <string name="lbl_btn_trademark_operation">商标运营</string>
    <string name="lbl_btn_patent_integrated_search">专利综合查询</string>
    <string name="lbl_btn_patent_annual_fee_search">专利年费监测</string>
    <string name="lbl_btn_patent_achieve_transform">专利成果转化</string>
    <string name="lbl_btn_patent_legal_status">专利法律状态</string>
    <string name="lbl_btn_patent_protect_service">专利维权服务</string>
    <string name="title_activity_patent_protection">专利维权服务</string>
    <string name="txt_sort_relative">相关度排序</string>
    <string name="txt_sort_timeup">申请日升序</string>
    <string name="txt_sort_timedown">申请日降序</string>
    <string name="txt_sort_publictimeup">公开公告日升序</string>
    <string name="txt_sort_publictimedow">公开公告日降序</string>
    <string name="txt_more">更多</string>
    <string name="lbl_internation_category_num_note">（输入1-45之间的数字）</string>
    <string name="lbl_search_method">查询方式：</string>
    <string-array name="combo_search_method">
        <item>汉字</item>
        <item>拼音</item>
        <item>纯拼音</item>
        <item>英语</item>
        <item>数字</item>
        
    </string-array>
    <string-array name="combo_search_method_value">
        <item>CHN</item>
        <item>PY</item>
        <item>CPY</item>
        <item>ENG</item>
        <item>NUM</item>
        
    </string-array>
    <string name="lbl_search_style">查询类型：</string>
    <string name="lbl_search_content">查询内容：</string>
    <string name="btn_auto_search">自动查询</string>
    <string name="btn_select_search">选择查询</string>
    <string name="title_activity_trade_mark_similar_result_list">查询结果</string>
    <string name="title_activity_trade_mark_similar_detail">商标内容</string>
    <string name="lbl_internation_category_num">国际分类号：</string>
    <string name="lbl_application_number">注册号／申请号：</string>
    <string name="lbl_trademark_name">商标名称：</string>
    <string name="lbl_applicant_name_C">申请人名称（中文）：</string>
    <string name="lbl_applicant_name_E">申请人名称（英文）：</string>
    <string name="lbl_result_sort_style">结果集排序类型：</string>
    <string-array name="result_sort_style_array">
        <item>默认</item>
        <item>按注册号</item>
        <item>按类别</item>
    </string-array>
    <string name="dialog_error_message_trademark_query_content">申请／注册号，商标名称，申请人名称（中文），申请人名称（英文）只能单独做为搜索条件！</string>
    <string name="title_activity_trade_mark_integrated_result_list">商标综合查询</string>
    <string name="title_activity_trade_mark_integrated_precision_result_list">商标综合查询</string>
    <string-array name="spinner_trademark_query_method_array">
        <item>前包含</item>
        <item>包含</item>
        <item>精确</item>
    </string-array>
    <string name="lbl_inputRegNumber">输入注册／申请号：</string>
    <string name="btn_search">查询</string>
    <string name="lbl_noresult">没有您要查找的结果</string>
    <string name="lbl_applNum">申请／注册号：</string>
    <string name="lbl_categoryNum">类号：</string>
    <string name="lbl_brandName">商标名称：</string>
    <string name="lbl_applicantName">申请人名称：</string>
    <string name="title_activity_trade_mark_status_result_list">商标状态查询</string>
    <string name="title_activity_trade_mark_status_detail">查询内容</string>
    <string name="title_activity_trade_mark_naming">商标取名</string>
    <string name="txt_hint_trademark_naming_area">输入商品名称</string>
    <string name="txt_hint_trademark_naming_key">输入关键字</string>
    <string name="title_activity_trade_mark_naming_result">商标筛选</string>
    <string name="title_activity_patent_integrated_search">专利综合查询</string>
    <string name="title_activity_patent_integrated_query">专利综合查询</string>
    <string name="radio_china_patent_txt">中国专利数据库</string>
    <string name="radio_foreign_patent_txt">外国专利数据库</string>
    <string name="input_search_keyword_hint">查询关键词</string>
    <string name="title_activity_ptnt_isearch_detail">专利内容</string>
    <string name="chk_lbl_select_all">全选</string>
    <string name="chk_lbl_invention_patent">发明</string>
    <string name="chk_lbl_utility_patent">实用新型</string>
    <string name="chk_lbl_design_patent">外观设计</string>
    <string name="chk_lbl_invention_grant_patent">发明授权</string>
    <string name="chk_lbl_Taiwan_patent">中国台湾专利</string>
    <string name="chk_lbl_HK_patent">香港特区</string>
    <string name="chk_lbl_us_public">美国公开</string>
    <string name="chk_lbl_us_grant">美国授权</string>
    <string name="chk_lbl_jp">日本</string>
    <string name="chk_lbl_uk">英国</string>
    <string name="chk_lbl_fr">法国</string>
    <string name="chk_lbl_ger">德国</string>
    <string name="chk_lbl_swiss">瑞士</string>
    <string name="chk_lbl_Russia">俄罗斯</string>
    <string name="chk_lbl_PCT">PCT组织</string>
    <string name="chk_lbl_eu">欧专</string>
    <string name="chk_lbl_korea">韩国</string>
    <string name="chk_lbl_south_east_asia">东南亚</string>
    <string name="title_activity_patent_annual_fee_monitor_list">年费监测</string>
    <string name="txt_hint_search">搜索</string>
    <string name="title_activity_patent_achieve_transform_list">专利成果转化</string>
    <string name="title_activity_patent_achieve_transform_list_search_page">专利成果转化</string>
    <string name="title_activity_ptnt_consult">咨询</string>
    <string name="title_VIP_club">会员优享</string>
    <string name="lbl_centre_service_announcement">通知公告</string>
    <string name="lbl_centre_service_manage_train">管理培训</string>
    <string name="lbl_centre_service_quality_inspection">质量检测</string>
    <string name="lbl_centre_service_finance_service">金融服务</string>
    <string name="lbl_centre_service_destined_property">工业房产</string>
    <string name="lbl_centre_service_health_check">健康体检</string>
    <string name="lbl_centre_service_recruitment">企业招聘</string>
    <string name="lbl_trademark_service">商标服务</string>
    <string name="lbl_patent_service">专利服务</string>
    <string name="title_activity_announce_centre">通知公告</string>
    <string name="title_activity_announcement_body">公告内容</string>
    <string name="title_activity_manage_training">管理培训</string>
    <string name="lbl_tab_train_notice">培训须知</string>
    <string name="lbl_tab_train_courses">课程目录</string>
    <string name="lbl_tab_train_review">活动回顾</string>
    <string name="title_activity_course"></string>
    <string name="title_activity_course_body">课程详情</string>
    <string name="txt_number_of_ppl">报名人数</string>
    <string name="title_activity_financial_service">金融服务</string>
    <string name="title_activity_credit_loan">专项信用贷款</string>
    <string name="title_activity_enlending">资金转贷</string>
    <string name="title_activity_other_finance">其他融资</string>
    <string name="txtView_ten_thousand">万元</string>
    <string name="lbl_btn_finance_loan_apply">贷款申请</string>
    <string name="title_activity_loan_application_form">贷款申请</string>
    <string name="txtView_loan_company_capital_status">企业当前资产状况</string>
    <string name="txtView_loan_reg_capital">注册资本</string>
    <string name="txtView_loan_total_asset">资产总额</string>
    <string name="txtView_loan_total_debt">负债总额</string>
    <string name="txtView_loan_bank_loan">银行贷款</string>
    <string name="txtView_loan_other_loan">其他借款</string>
    <string name="txtView_loan_owner_equity">所有者权益</string>
    <string name="txtView_loan_asset_liability_ratio">资产负债率</string>
    <string name="txtView_loan_company_operation_status">企业当前经营状况</string>
    <string name="txtView_loan_main_product">主导产品</string>
    <string name="txtView_loan_productivity">产品产量</string>
    <string name="txtView_loan_product_capability">生产能力</string>
    <string name="txtView_loan_industrial_output">现价工业产值</string>
    <string name="txtView_loan_sales_income">销售收入</string>
    <string name="txtView_loan_total_profit">利润总额</string>
    <string name="txtView_loan_total_tax">实缴税金</string>
    <string name="txtView_loan_added_value_tax">其中增值税</string>
    <string name="txtView_loan_detail">贷款详情</string>
    <string name="txtView_loan_purpose">贷款用途</string>
    <string name="txtView_loan_limit">贷款额度</string>
    <string name="txtView_loan_period">贷款期限</string>
    <string name="lbl_btn_submit_loan_application">提交申请</string>
    <string name="title_activity_onlend">资金转贷</string>
    <string name="lbl_btn_finance_onlend_apply">申请转贷</string>
    <string name="title_activity_onlend_application_form">转贷申请</string>
    <string name="txtView_onlend_loan_amount">贷款金额</string>
    <string name="txtView_onlend_loan_deadline">贷款到期</string>
    <string name="txtView_onlend_loan_bank">贷款银行</string>
    <string name="txt_hint_onlend_loan_deadline">点击选择日期</string>
    <string name="txtView_onlend_bank_cmb">招商银行</string>
    <string name="txtView_onlend_bank_ccb">建设银行</string>
    <string name="txtView_onlend_bank_jxccb">嘉兴银行</string>
    <string name="txtView_onlend_bank_czcb">稠州银行</string>
    <string name="txtView_onlend_bank_hxb">华夏银行</string>
    <string name="txtView_onlend_bank_czb">浙商银行</string>
    <string name="txtView_onlend_bank_zjwx">吴兴农村合作银行</string>
    <string name="lbl_btn_finance_onlend_sumbit_application_form">提交申请</string>
    <string name="title_activity_quality_service">质量检测</string>
    <string name="title_activity_wood_inspection">木业检测</string>
    <string name="title_activity_kids_wear_inspection">童装检测</string>
    <string name="title_activity_textile_inspection">纺织品检测</string>
</resources>