<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.weiping.servicecentre.finance.onlend.activity.OnlendApplicationFormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffffff">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:text="@string/txtView_onlend_loan_amount"/>
                <EditText
                    android:id="@+id/et_cs_finance_lend_amount"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:focusableInTouchMode="true"
                    android:inputType="numberDecimal"
                    android:background="@drawable/edittextwithoutborder"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txtView_ten_thousand"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffffff">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:text="@string/txtView_onlend_loan_deadline"/>
                <EditText
                    android:id="@+id/et_cs_finance_onlend_deadline"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:focusableInTouchMode="false"
                    android:editable="false"
                    android:hint="@string/txt_hint_onlend_loan_deadline"
                    android:background="@drawable/edittextwithoutborder"
                    android:onClick="onClickListenerOnlendChangeDeadline"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="#ffffff">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txtView_onlend_loan_bank"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"/>
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroup_lend_bank"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#ffffff">
                <RadioButton
                    android:id="@+id/radioButton_lend_bank_cmb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/txtView_onlend_bank_cmb"
                    android:drawableLeft="@drawable/cmb"
                    android:drawablePadding="10dp"/>
                <RadioButton
                    android:id="@+id/radioButton_lend_bank_ccb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/txtView_onlend_bank_ccb"
                    android:drawableLeft="@drawable/ccb"
                    android:drawablePadding="10dp"/>
                <RadioButton
                    android:id="@+id/radioButton_lend_bank_jxccb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/txtView_onlend_bank_jxccb"
                    android:drawableLeft="@drawable/jxccb"
                    android:drawablePadding="10dp"/>
                <RadioButton
                    android:id="@+id/radioButton_lend_bank_czcb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/txtView_onlend_bank_czcb"
                    android:drawableLeft="@drawable/czcb"
                    android:drawablePadding="10dp"/>
                <RadioButton
                    android:id="@+id/radioButton_lend_bank_hxb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/txtView_onlend_bank_hxb"
                    android:drawableLeft="@drawable/hxb"
                    android:drawablePadding="10dp"/>
                <RadioButton
                    android:id="@+id/radioButton_lend_bank_czb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/txtView_onlend_bank_czb"
                    android:drawableLeft="@drawable/czb"
                    android:drawablePadding="10dp"/>
                <RadioButton
                    android:id="@+id/radioButton_lend_bank_zjwx"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/txtView_onlend_bank_zjwx"
                    android:drawableLeft="@drawable/zjrc"
                    android:drawablePadding="10dp"/>
            </RadioGroup>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_btn_finance_onlend_sumbit_application_form"
                android:onClick="onClickListenerOnlendFormSubmit"
                android:background="#08a9aa"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
