<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.weiping.credential.activity.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_signup_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:hint="@string/txt_hint_enter_username"
                android:background="@drawable/edittextwithoutborder"/>
            <EditText
                android:id="@+id/et_signup_phone_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_below="@id/et_signup_username"
                android:textSize="22sp"
                android:hint="@string/txt_hint_enter_mobile_phone"
                android:inputType="number"
                android:background="@drawable/edittextwithoutborder"/>
            <EditText
                android:id="@+id/et_signup_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_below="@id/et_signup_phone_number"
                android:inputType="textPassword"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                android:textSize="22sp"
                android:hint="@string/txt_hint_enter_password"
                android:background="@drawable/edittextwithoutborder"/>
            <EditText
                android:id="@+id/et_signup_password_again"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_below="@id/et_signup_password"
                android:inputType="textPassword"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                android:hint="@string/txt_hint_enter_password_again"
                android:textSize="22sp"
                android:background="@drawable/edittextwithoutborder"/>
            <EditText
                android:id="@+id/et_signup_company_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_below="@id/et_signup_password_again"
                android:hint="@string/txt_hint_enter_company_name"
                android:textSize="22sp"
                android:background="@drawable/edittextwithoutborder"/>
            <RelativeLayout
                android:id="@+id/rl_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_signup_company_name"
                android:layout_marginTop="3dp">
                <EditText
                    android:id="@+id/txt_register_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/img_register_code"
                    android:paddingRight="5dp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                    android:hint="@string/txt_hint_enter_verify_code"
                    android:textSize="22sp"
                    android:background="@drawable/edittextwithoutborder"/>
                <ImageView
                    android:id="@id/img_register_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/txt_register_code"
                    android:layout_alignBottom="@id/txt_register_code"
                    android:layout_alignParentRight="true"
                    android:adjustViewBounds="true"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/txt_signup_agree_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_below="@id/rl_code"
                android:gravity="center"
                android:text="@string/txt_agree_before_reg"/>
            <TextView
                android:id="@+id/txt_signup_agree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_below="@id/txt_signup_agree_first"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:textColor="#068cf5"
                android:clickable="true"
                android:text="@string/txt_agree_click"
                android:onClick="onClickSignUpAgreement"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_marginTop="3dp"
                android:layout_below="@id/txt_signup_agree"
                android:text="@string/sign_up"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:background="@drawable/btn_login"
                android:onClick="onClickSignUp"/>
       </RelativeLayout>
    </ScrollView>

</LinearLayout>
