<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#f7f7f7"
    tools:context="com.weiping.InteProperty.trademark.activity.TradeMarkSimilarSearchActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#938f8f"
            android:text="@string/lbl_internation_category_num"/>
        <Spinner
            android:id="@+id/sp_trademark_similar_query_category_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:requiresFadingEdge="vertical">
        </Spinner>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#f7f7f7"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#938f8f"
            android:text="@string/lbl_search_method"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/combo_search_method"
            android:requiresFadingEdge="vertical">
        </Spinner>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#f7f7f7"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#938f8f"
        android:text="@string/lbl_search_content"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_searchContent"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn1"
        android:text="@string/btn_auto_search"
        android:textColor="#938f8f"
        android:id="@+id/auto_search_button"
        android:onClick="performAutoSearch"/>
</LinearLayout>
